--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
 
 <body>
-   <a href="https://www.bilibili.com" target="blank">哔哩哔哩</a>
+   <a href="https://www.bilibili.com" target="_blank">哔哩哔哩</a>
     
-    <a href="https://www.baidu.com" target="blank">百度</a>
+    <a href="https://www.baidu.com" target="_blank">百度</a>
 
 </body>
 
