--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
    <a href="https://www.bilibili.com" target="_blank">哔哩哔哩</a>
     
     <a href="https://www.baidu.com" target="_blank">百度</a>
+    
+    <a href="https://www.github.com target="_blank">GitHub</a>
 
 </body>
 
